--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -88,12 +88,14 @@ menu:
   #schedule: /schedule/ || calendar
   #sitemap: /sitemap.xml || sitemap
   recommend: /recommend/
+  links: /links/
   commonweal: /404/ || heartbeat
 
 # Enable/Disable menu icons.
 menu_icons:
   enable: true
   recommend: gg
+  links: gg
 
 
 # ---------------------------------------------------------------
